[gd_scene load_steps=6 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Boss/boss clone-2.png.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Boss/boss clone-1.png.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.0667
height = 79.725

[node name="Boss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.18378, 11.7519 )
scale = Vector2( 4.21695, 4.21695 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.45453, -53.8174 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 77.2944, 35.1224 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -82.4897, 37.4451 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( -80.3057, -123.612 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 76.5217, -126.555 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
